--- a/Android/ap_tjmp82_u3/app/src/main/res/layout/activity_record_form.xml
+++ b/Android/ap_tjmp82_u3/app/src/main/res/layout/activity_record_form.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:inputType="textNoSuggestions"
         android:hint="@string/moduleNum"
+        android:text=""
         android:textColor="@color/inputColor"
         android:maxLength="10"
         android:minHeight="44dp"
